delegating a constructor can't work like this, fdo#55033

Change-Id: I6b057ad68054fe5806daec722b3bfe4e33bc3602